# Agentic-Property

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  architecture.html  chat_metadata.json  compose.yaml  main.py  pyproject.toml  scratch_test.py  step.md
.dvc/: config
.hermes/plans/: 2026-06-28_000000-conversation-memory.md
Config/: mcp.yaml
Config/pydantic/: settings.py
Data/eval/: README.md
config/: mcp.yaml
config/pydantic/: __init__.py  settings.py
data/: .gitignore  active_dld.csv.dvc  historical_dld.csv.dvc
data/eval/: quality_tests.json  structural_tests.json
dld-mcp-server/: .dockerignore  .gitignore  docker-compose.yml
dld-mcp-server/data-service/: Dockerfile  crontab  database.py  main.py  models.py  requirements.txt  scraper.py  seed.py
dld-mcp-server/mcp-server/: Dockerfile  requirements.txt  server.py  tool_models.py
docker/: agent-api.Dockerfile  crontab  data-service.Dockerfile  docker-compose.yml  mcp-server.Dockerfile
docs/: architecture.md  data-provenance.md  demo-runbook.md  design-system.md  evaluation.md  scoring-and-evidence.md  troubleshooting.md
docs/assets/: README.md
docs/decisions/: 001-structured-buyer-briefs.md  002-deterministic-scoring.md  003-eight-node-preservation.md  004-mcp-boundary.md  005-frozen-snapshot.md  006-browser-local-persistence.md  007-abstract-imagery.md  008-historical-evidence-policy.md  009-live-only-failure.md  010-non-blocking-brief-correction.md  011-structured-guidance-and-evidence-metrics.md  012-editorial-ledger-and-navigation.md  README.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: flagship.spec.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  finance.test.ts  finance.ts  format.ts  storage.ts  styles.css  types.ts
langsmith_outputs/: 11-7 structural 2.0.csv  11-7 structural 3.csv  11-7 structural.csv  quality-11a6e415.csv  structural_after_adjusting.csv  structural_before_adjusting.csv
legacy/streamlit/: README.md
scripts/: migrate_snapshot_schema.py  preflight.py  run_cli.py  run_data_service.py  run_langsmith_eval.py  scraper.py  upload_eval_datasets.py
specs/006-aizen-flagship-remaster/: acceptance.md  data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/archive/: README.md
src/: area_matcher.py  buyer_brief.py  buyer_guidance.py  logging_setup.py  utils.py
src/agent_api/: __init__.py  app.py
src/agents/: graph.py  state.py
src/config/: settings.py
src/data_service/: app.py  bootstrap.py  database.py  db_tables.py  seed.py
src/llm/: factory.py
src/mcp/: __init__.py  client.py  schemas.py  server.py
src/memory/: chat_history.db-shm  chat_history.db-wal  long_term_memory.py
src/nodes/: answer_generation.py  comparison_engine.py  memory.py  query_relevancy.py  (+4 more)
tests/: test_buyer_brief.py  test_buyer_guidance.py
(+89 files in other folders)
