[project]
name = "agentic-property"
version = "0.1.0"
description = "Agentic real estate assistant — returns the property the user actually needs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # ── Existing (kept for teammates) ─────────────────────────────────────────
    "groq>=0.37.1",
    "huggingface>=0.0.1",
    "langchain>=1.3.10",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "numpy>=2.4.6",
    "opendataloader-pdf>=2.4.7",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.6.0",
    "transformers>=5.12.1",
    # ── Agent core additions ───────────────────────────────────────────────────
    "langchain-ollama>=0.3",
    "pydantic-settings>=2.0",
    "ddgs>=9.14.4",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
