[project]
name = "agentic-property"
version = "0.1.0"
description = "Agentic real estate assistant — returns the property the user actually needs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=0.37.1",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    # ── Agent core ────────────────────────────────────────────────────────────
    "langchain-ollama>=0.3",
    "pydantic-settings>=2.0",
    "ddgs>=9.14.4",
    "pydantic>=2.13.4",
    # ── MCP client (src/tools/dld_mcp.py) ─────────────────────────────────────
    "mcp[cli]>=1.27",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
